# Systems-Programming-in-C

./: README.md
Lab 1/: lab1  lab1.c
Lab 2/: lab2  lab2.c
Lab 3/: lab3  lab3.c
Lab 4/: lab4  lab4.c
Lab 5/: lab5  lab5.c
Lab 6/: lab6  lab6.c  testing.txt
MealPlan/: CMakeLists.txt  main  main.c
